# IntroduccionALaProgramacion

./: Ejercicio01_Suma.psc  Ejercicio01_SumaDeDosNumeros.drawio  Ejercicio05_CalcularAreaYvolumenDeUnCilindro.psc  Ejercicio06_ParOImpar.psc  README.md
Ejercicios-pseudocodigo/: Ejercicio02_DeterminarCualEsMayor.psc  Ejercicio03_ImprimirMayorYMenor.psc  Ejercicio04_CalcularHipoteusa.psc  Ejercicio05_CalcularAreaYvolumenDeUnCilindro.psc
EjerciciosEnC/Ejercicio01/: Makefile.win  PrimerPrograma.dev  PrimerPrograma.layout  main.c
EjerciciosEnC/Ejercicio02/: Ejercicio02.dev  Ejercicio02.layout  Makefile.win  main.c
EjerciciosEnC/Ejercicio03/: Ejercicio03.dev  Ejercicio03.layout  Makefile.win  main.c
EjerciciosEnC/Ejercicio04/: Ejercicio04.dev  Makefile.win  main.c
EjerciciosEnC/Ejercicio05/: Ejercicio05.dev  Ejercicio05.layout  Makefile.win  main.c
EjerciciosEnC/Ejercicio06/: CMakeLists.txt  Ejercicio06.dev  Makefile.win  main.c
OtrosEjercicios/: Ejercicio02_SumarDosNumeros.psc
ejercicios-09-05/: CMakeLists.txt  ejercicio01.c  ejercicio02.c  ejercicio03.c  ejercicio04.c  ejercicio05.c  ejercicio06.c  ejercicio07.c
ejercicios-ciclos/ejercicios-en-c/: Ejercicio01.c  Ejercicio02.c  Ejercicio03.c  Ejercicio04.c  Ejercicio05.c  Ejercicio06.c  Ejercicio07.c  Ejercicio09.c
ejercicios-en-c/: CMakeLists.txt  ejercicio01.c  ejercicio02.c  ejercicio03.c  ejercicio04.c  ejercicio05.c  ejercicio06.c
otros-ejercicios/: Ejercicio01_MostrarUnMensaje.psc  Ejercicio03_NumeroParOImpar.psc  Ejercicio04_MayorDeDosNumeros.psc  Ejercicio05_AreaDeUnTriangulo.psc
