cmake_minimum_required(VERSION 3.31)
project(ejercicios_09_05 C)

set(CMAKE_C_STANDARD 99)

add_executable(ejercicios_09_05 ejercicio01.c)
add_executable(tablaDeMultiplicar ejercicio02.c)
add_executable(mayorDeTres ejercicio03.c)
add_executable(bisiesto ejercicio04.c)
add_executable(perimetroRectangulo ejercicio05.c)
add_executable(numeroPositivo ejercicio06.c)
add_executable(factorial ejercicio07.c)